transition effect added to the Enter button

--- a/index.css
+++ b/index.css
@@ -65,6 +65,7 @@ h1{
 }
 
 #Grant{
+    
     box-sizing: border-box;
     text-align: center;
     margin:2px;
@@ -73,19 +74,10 @@ h1{
     border: whitesmoke solid 2px;
     border-radius: 10px;
     margin:auto 0px ;
-    background-color: black;
+    background-color:black;
+    
 }
-#Wrong{
-    box-sizing: border-box;
-    text-align: center;
-    margin:2px;
-    min-width: 150px;
-    color: whitesmoke;
-    border: whitesmoke solid 2px;
-    border-radius: 10px;
-    margin:auto 0px ;
-    background-color: black;
-}
+
 #denied{
     box-sizing: border-box;
     text-align: center;
@@ -96,6 +88,7 @@ h1{
     border-radius: 10px;
     margin:auto 0px ;
     background-color: black;
+    
 }
 #button{
          
@@ -113,4 +106,9 @@ button{
     color: black;
     font-size: 20px;
     font-weight: 10px;
+}
+button:hover {
+    background-color: blue;
+    color: aliceblue;
+    transition: 0.5s;
 }
