--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
 body{
-   
     margin: auto;
    font: 25px/1.5 arial;
    width: 80%;
@@ -14,6 +13,7 @@ body{
 
 h1{
     margin-top: 0px;
+    margin: auto;
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
     background-color: white;
@@ -32,6 +32,7 @@ h1{
         background-color: white;
 }
 .input{
+    
     width:90% ;
     height: 30px;
     border-radius: 0px;
@@ -41,6 +42,7 @@ h1{
     
 }
 #eqn{
+    display: block;
     padding: 0px;
     width: 90%;
     border: 1px solid black;
@@ -56,7 +58,8 @@ h1{
     
 }
 #flex{
-    display: flex;
+    display:flex;
+    flex-direction: column;
     
     width: 100%;
     box-sizing: border-box;
@@ -94,7 +97,7 @@ h1{
     
 }
 #button{
-         
+    margin: auto;
     width: 30%;
     min-height: 30px;
     border-radius: 0px;
